@@ -4,6 +4,10 @@ Changelog
 1.2 - unreleased
 ----------------
 
+- Avoid a deprecation warning for calling the ``actions`` method from the
+  context_state state view without passing in an action category.
+  [hannosch]
+
 - Updated action and icon handling in the actions menu to take advantage of
   the icon being stored on the action itself.
   [hannosch]
